# z-fast-trie-sux

./: README.md
static_implementation/: Cargo.toml
static_implementation/benches/: global_benchmarks.rs  my_benchmark.rs  single_benchmarks.rs
static_implementation/src/: lib.rs
static_implementation/src/hashes/: mod.rs  naive_hash.rs  rolling_hash.rs
static_implementation/src/rank_structures/: jacobson_rank.rs  mod.rs  naive_rank.rs
static_implementation/src/static_dicts/: minimal_perfect_hash_static_dict.rs  mod.rs
static_implementation/src/traits/: hash.rs  mod.rs  rank_structure.rs  static_dict.rs  trie.rs
static_implementation/src/tries/: compact_trie.rs  mod.rs  naive_trie.rs  z_fast_trie.rs  z_fast_trie_sux.rs
static_implementation/src/utils/: .str.rs.swp  bitwise_operations.rs  mod.rs  ptr.rs  str.rs
static_implementation/tests/: test_tries.rs
