[package]
name = "z_fast_trie_static_sux"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.9.0-alpha.1" , git = "https://github.com/rust-lang-nursery/rand", features = [ "small_rng" ] }
bitvec = "1"
succinct = "0.5.2"
