[package]
name = "z_fast_trie_static_sux"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.9.0-alpha.1" , git = "https://github.com/rust-lang-nursery/rand", features = [ "small_rng" ] }
sux = "0.4.6"
refbox = "0.3.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "single_benchmarks"
harness = false

[[bench]]
name = "global_benchmarks"
harness = false
